Removing general positioning of spinner to fix layout bug when spinner is used on secondary buttons. Bug happens because secondary-button reruns ffe-sb1-spinner-mixin after position is set in primary-button which it extends.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,7 +26,6 @@
 .ffe-sb1-spinner(@color: @ffe-blue-royal-light, @size: 20px) {
   content: ' ';
   display: inline-block;
-  position: relative;
   width: @size;
   height: @size;
   border: 3px solid @color;
